--- a/index.html
+++ b/index.html
@@ -5,23 +5,10 @@
     <title>GoSurf</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
-    <style>
-      body {
-        text-align: center;
-        margin-top: 160px;
-        font: 400 20px Roboto, sans-serif;
-        color: #fff;
-        background:#0068b7;
-        -webkit-font-smoothing:antialiased;
-      }
-      h1 {
-        color: #fff;
-        margin: 5px 0 10px;
-        font-weight:900;
-      }
-    </style>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <img src="logo_white.png" />
     <h1>GoSurf</h1>
     We are driving on the rails.<br />
     Paddling out soon.
