--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <img src="logo_white.png" />
+    <img src="logo_reverse.png" />
     <h1>GoSurf</h1>
     We are driving on the rails.<br />
     Paddling out soon.
